# enum-from-enum

./: Cargo.toml  readme.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  readme.md
