[package]
name = "enum_from_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# TODO
proc-macro2 = "1.0.43"
syn = {version = "1.0.91", features=["extra-traits"]}
quote = "1.0"
expand = "0.2.0"
