[package]
name = "enum_from_variant"
version = "0.1.0"
edition = "2021"
author = "Samuel Onoja"
license = "MIT"
description = "A Rust macro to generate From<T> trait implementations for enum variants, simplifying error conversions and enum mapping."
keywords = ["enum", "conversion", "from-trait", "macro", "error-handling"]
categories = ["macros", "error-handling", "data-structures"]
homepage = "https://github.com/borngraced/enum-from-variant"
repository = "https://github.com/borngraced/enum-from-variant"
documentation = "https://docs.rs/enum-from-variant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.39"
syn = { version = "1.0", features=["extra-traits"] }
quote = "1.0"
